@@ -12,7 +12,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Path;
 import java.io.File;
 import java.io.FileWriter;
-import java.io.FileFilter;
 import java.io.BufferedWriter;
 import java.util.Arrays;
 import java.util.Collections;
@@ -45,14 +44,15 @@ import org.lflang.FileConfig;
 import org.lflang.LFRuntimeModule;
 import org.lflang.LFStandaloneSetup;
 import org.lflang.Target;
-import org.lflang.TargetConfig.Mode;
 import org.lflang.generator.GeneratorResult;
+import org.lflang.generator.DockerGeneratorBase;
 import org.lflang.generator.LFGenerator;
 import org.lflang.generator.LFGeneratorContext;
 import org.lflang.generator.MainContext;
 import org.lflang.tests.Configurators.Configurator;
 import org.lflang.tests.LFTest.Result;
 import org.lflang.tests.TestRegistry.TestCategory;
+import org.lflang.util.FileUtil;
 import org.lflang.util.LFCommand;
 
 import com.google.inject.Inject;
@@ -117,28 +117,28 @@ public abstract class TestBase {
     public static class Message {
         /* Reasons for not running tests. */
         public static final String NO_WINDOWS_SUPPORT = "Not (yet) supported on Windows.";
-        public static final String ALWAYS_MULTITHREADED = "The reactor-cpp runtime is always multithreaded.";
-        public static final String NO_THREAD_SUPPORT = "Target does not support the 'threads' property.";
+        public static final String NO_SINGLE_THREADED_SUPPORT = "Target does not support single-threaded execution.";
         public static final String NO_FEDERATION_SUPPORT = "Target does not support federated execution.";
         public static final String NO_DOCKER_SUPPORT = "Target does not support the 'docker' property.";
         public static final String NO_DOCKER_TEST_SUPPORT = "Docker tests are only supported on Linux.";
         public static final String NO_GENERICS_SUPPORT = "Target does not support generic types.";
 
         /* Descriptions of collections of tests. */
-        public static final String DESC_SERIALIZATION = "Run serialization tests (threads = 0).";
-        public static final String DESC_GENERIC = "Run generic tests (threads = 0).";
+        public static final String DESC_SERIALIZATION = "Run serialization tests.";
+        public static final String DESC_GENERIC = "Run generic tests.";
         public static final String DESC_TYPE_PARMS = "Run tests for reactors with type parameters.";
-        public static final String DESC_EXAMPLES = "Validate examples.";
-        public static final String DESC_EXAMPLE_TESTS = "Run example tests.";
-        public static final String DESC_MULTIPORT = "Run multiport tests (threads = 0).";
+        public static final String DESC_MULTIPORT = "Run multiport tests.";
         public static final String DESC_AS_FEDERATED = "Run non-federated tests in federated mode.";
         public static final String DESC_FEDERATED = "Run federated tests.";
         public static final String DESC_DOCKER = "Run docker tests.";
         public static final String DESC_DOCKER_FEDERATED = "Run docker federated tests.";
         public static final String DESC_CONCURRENT = "Run concurrent tests.";
-        public static final String DESC_TARGET_SPECIFIC = "Run target-specific tests (threads = 0)";
+        public static final String DESC_TARGET_SPECIFIC = "Run target-specific tests";
         public static final String DESC_AS_CCPP = "Running C tests as CCpp.";
-        public static final String DESC_FOUR_THREADS = "Run non-concurrent and non-federated tests (threads = 4).";
+        public static final String DESC_SINGLE_THREADED = "Run non-concurrent and non-federated tests with threading = off.";
+        public static final String DESC_SCHED_SWAPPING = "Running with non-default runtime scheduler ";
+        public static final String DESC_ROS2 = "Running tests using ROS2.";
+        public static final String DESC_MODAL = "Run modal reactor tests.";
 
         /* Missing dependency messages */
         public static final String MISSING_DOCKER = "Executable 'docker' not found or 'docker' daemon thread not running";
@@ -231,6 +231,13 @@ public abstract class TestBase {
             printTestHeader(target, description);
             runTestsAndPrintResults(target, selected, configurator, level, copy);
         }
+    }
+
+    /**
+     * Whether to enable {@link #runWithThreadingOff()}.
+     */
+    protected boolean supportsSingleThreadedExecution() {
+        return false;
     }
 
     /**
@@ -365,10 +372,10 @@ public abstract class TestBase {
      */
     private LFGeneratorContext configure(LFTest test, Configurator configurator, TestLevel level) throws IOException {
         var context = new MainContext(
-            Mode.STANDALONE, CancelIndicator.NullImpl, (m, p) -> {}, new Properties(), true,
+            LFGeneratorContext.Mode.STANDALONE, CancelIndicator.NullImpl, (m, p) -> {}, new Properties(), true,
             fileConfig -> new DefaultErrorReporter()
         );
-        
+
         var r = resourceSetProvider.get().getResource(
             URI.createFileURI(test.srcFile.toFile().getAbsolutePath()),
             true);
@@ -379,7 +386,8 @@ public abstract class TestBase {
         }
 
         fileAccess.setOutputPath(FileConfig.findPackageRoot(test.srcFile, s -> {}).resolve(FileConfig.DEFAULT_SRC_GEN_DIR).toString());
-        test.fileConfig = new FileConfig(r, FileConfig.getSrcGenRoot(fileAccess), context);
+        test.context = context;
+        test.fileConfig = new FileConfig(r, FileConfig.getSrcGenRoot(fileAccess), context.useHierarchicalBin());
 
         // Set the no-compile flag the test is not supposed to reach the build stage.
         if (level.compareTo(TestLevel.BUILD) < 0) {
@@ -436,8 +444,8 @@ public abstract class TestBase {
     private GeneratorResult generateCode(LFTest test) {
         GeneratorResult result = GeneratorResult.NOTHING;
         if (test.fileConfig.resource != null) {
-            generator.doGenerate(test.fileConfig.resource, fileAccess, test.fileConfig.context);
-            result = test.fileConfig.context.getResult();
+            generator.doGenerate(test.fileConfig.resource, fileAccess, test.context);
+            result = test.context.getResult();
             if (generator.errorsOccurred()) {
                 test.result = Result.CODE_GEN_FAIL;
                 throw new AssertionError("Code generation unsuccessful.");
@@ -482,50 +490,31 @@ public abstract class TestBase {
             StringWriter sw = new StringWriter();
             PrintWriter pw = new PrintWriter(sw);
             e.printStackTrace(pw);
-            test.execLog.buffer.append(sw.toString());
+            test.execLog.buffer.append(sw);
             return;
         }
         test.result = Result.TEST_PASS;
     }
 
     /**
-     * Return a Mapping of federateName -> absolutePathToDockerFile.
-     * Expects the docker file to be two levels below where the source files are generated (ex. srcGenPath/nameOfFederate/*Dockerfile)
-     * @param test The test to get the execution command for.
+     * Return the content of the bash script used for testing docker option in federated execution.
+     * @param dockerFiles A list of paths to docker files.
+     * @param dockerComposeFilePath The path to the docker compose file.
      */
-    private Map<String, Path> getFederatedDockerFiles(LFTest test) {
-        Map<String, Path> fedNameToDockerFile = new HashMap<>();
-        File[] srcGenFiles = test.fileConfig.getSrcGenPath().toFile().listFiles();
-        for (File srcGenFile : srcGenFiles) {
-            if (srcGenFile.isDirectory()) {
-                File[] dockerFile = srcGenFile.listFiles(new FileFilter() {
-                    @Override
-                    public boolean accept(File pathName) {
-                        return pathName.getName().endsWith("Dockerfile");
-                    }
-                });
-                assert dockerFile.length == 1;
-                fedNameToDockerFile.put(srcGenFile.getName(), dockerFile[0].getAbsoluteFile().toPath());
-            }
-        }
-        return fedNameToDockerFile;
-    }
-
-    /**
-     * Return the content of the bash script used for testing docker option in federated execution. 
-     * @param fedNameToDockerFile A mapping of federateName -> absolutePathToDockerFile
-     * @param testNetworkName The name of the network used for testing the docker option. 
-     *                        See https://github.com/lf-lang/lingua-franca/wiki/Containerized-Execution#federated-execution for more details.
-     */
-    private String getDockerRunScript(Map<String, Path> fedNameToDockerFile, String testNetworkName) {
+    private String getDockerRunScript(List<Path> dockerFiles, Path dockerComposeFilePath) {
+        var dockerComposeCommand = DockerGeneratorBase.getDockerComposeCommand();
         StringBuilder shCode = new StringBuilder();
         shCode.append("#!/bin/bash\n");
-        int n = fedNameToDockerFile.size();
         shCode.append("pids=\"\"\n");
-        shCode.append(String.format("docker run --rm --network=%s --name=rti rti:rti -i 1 -n %d &\n", testNetworkName, n));
+        shCode.append(String.format("%s run -f %s --rm -T rti &\n",
+            dockerComposeCommand, dockerComposeFilePath));
         shCode.append("pids+=\"$!\"\nsleep 3\n");
-        for (String fedName : fedNameToDockerFile.keySet()) {
-            shCode.append(String.format("docker run --rm --network=%s %s:test -i 1 &\n", testNetworkName, fedName));
+        for (Path dockerFile : dockerFiles) {
+            var composeServiceName = dockerFile.getFileName().toString().replace(".Dockerfile", "");
+            shCode.append(String.format("%s run -f %s --rm -T %s &\n",
+                dockerComposeCommand,
+                dockerComposeFilePath,
+                composeServiceName));
             shCode.append("pids+=\" $!\"\n");
         }
         shCode.append("for p in $pids; do\n");
@@ -542,7 +531,7 @@ public abstract class TestBase {
      * Returns true if docker exists, false otherwise.
      */
     private boolean checkDockerExists() {
-        LFCommand checkCommand = LFCommand.get("docker", Arrays.asList("info"));
+        LFCommand checkCommand = LFCommand.get("docker", List.of("info"));
         return checkCommand.run() == 0;
     }
 
@@ -552,18 +541,20 @@ public abstract class TestBase {
      * docker build: https://docs.docker.com/engine/reference/commandline/build/
      * docker run: https://docs.docker.com/engine/reference/run/
      * docker image: https://docs.docker.com/engine/reference/commandline/image/
-     * 
+     *
      * @param test The test to get the execution command for.
      */
     private List<ProcessBuilder> getNonfederatedDockerExecCommand(LFTest test) {
         if (!checkDockerExists()) {
             System.out.println(Message.MISSING_DOCKER);
-            return Arrays.asList(new ProcessBuilder("exit", "1"));
+            return List.of(new ProcessBuilder("exit", "1"));
         }
         var srcGenPath = test.fileConfig.getSrcGenPath();
-        var dockerComposeFile = srcGenPath.resolve("docker-compose.yml");
-        return Arrays.asList(new ProcessBuilder("docker", "compose", "-f", dockerComposeFile.toString(), "up"), 
-                             new ProcessBuilder("docker", "compose", "-f", dockerComposeFile.toString(), "down", "--rmi", "local"));
+        var dockerComposeFile = FileUtil.globFilesEndsWith(srcGenPath, "docker-compose.yml").get(0);
+        var dockerComposeCommand = DockerGeneratorBase.getDockerComposeCommand();
+        return List.of(new ProcessBuilder(dockerComposeCommand, "-f", dockerComposeFile.toString(), "rm", "-f"),
+                       new ProcessBuilder(dockerComposeCommand, "-f", dockerComposeFile.toString(), "up", "--build"),
+                       new ProcessBuilder(dockerComposeCommand, "-f", dockerComposeFile.toString(), "down", "--rmi", "local"));
     }
 
     /**
@@ -573,10 +564,10 @@ public abstract class TestBase {
     private List<ProcessBuilder> getFederatedDockerExecCommand(LFTest test) {
         if (!checkDockerExists()) {
             System.out.println(Message.MISSING_DOCKER);
-            return Arrays.asList(new ProcessBuilder("exit", "1"));
+            return List.of(new ProcessBuilder("exit", "1"));
         }
-        
-        Map<String, Path> fedNameToDockerFile = getFederatedDockerFiles(test);
+        var srcGenPath = test.fileConfig.getSrcGenPath();
+        List<Path> dockerFiles = FileUtil.globFilesEndsWith(srcGenPath, ".Dockerfile");
         try {
             File testScript = File.createTempFile("dockertest", null);
             testScript.deleteOnExit();
@@ -584,24 +575,13 @@ public abstract class TestBase {
                 throw new IOException("Failed to make test script executable");
             }
             FileWriter fileWriter = new FileWriter(testScript.getAbsoluteFile(), true);
-            String testNetworkName = "linguaFrancaTestNetwork";
             BufferedWriter bufferedWriter = new BufferedWriter(fileWriter);
-            bufferedWriter.write(getDockerRunScript(fedNameToDockerFile, testNetworkName));
+            var dockerComposeFile = FileUtil.globFilesEndsWith(srcGenPath, "docker-compose.yml").get(0);
+            bufferedWriter.write(getDockerRunScript(dockerFiles, dockerComposeFile));
             bufferedWriter.close();
-            List<ProcessBuilder> execCommands = new ArrayList<>();
-            execCommands.add(new ProcessBuilder("docker", "network", "create", testNetworkName));
-            for (String fedName : fedNameToDockerFile.keySet()) {
-                Path dockerFile = fedNameToDockerFile.get(fedName);
-                execCommands.add(new ProcessBuilder("docker", "build", "-t", fedName + ":test", "-f", dockerFile.toString(), dockerFile.getParent().toString()));
-            }
-            execCommands.add(new ProcessBuilder(testScript.getAbsolutePath()));
-            for (String fedName : fedNameToDockerFile.keySet()) {
-                execCommands.add(new ProcessBuilder("docker", "image", "rm", fedName + ":test"));
-            }
-            execCommands.add(new ProcessBuilder("docker", "network", "rm", testNetworkName));
-            return execCommands;
+            return List.of(new ProcessBuilder(testScript.getAbsolutePath()));
         } catch (IOException e) {
-            return Arrays.asList(new ProcessBuilder("exit", "1"));
+            return List.of(new ProcessBuilder("exit", "1"));
         }
     }
 
@@ -613,7 +593,7 @@ public abstract class TestBase {
     private List<ProcessBuilder> getExecCommand(LFTest test, GeneratorResult generatorResult) {
         var srcBasePath = test.fileConfig.srcPkgPath.resolve("src");
         var relativePathName = srcBasePath.relativize(test.fileConfig.srcPath).toString();
-        
+
         // special case to test docker file generation
         if (relativePathName.equalsIgnoreCase(TestCategory.DOCKER.getPath())) {
             return getNonfederatedDockerExecCommand(test);
