@@ -28,14 +28,12 @@ package org.lflang;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import org.eclipse.xtext.util.RuntimeIOException;
-
 import org.lflang.TargetConfig.DockerOptions;
 import org.lflang.TargetConfig.TracingOptions;
 import org.lflang.generator.InvalidLfSourceException;
@@ -45,6 +43,8 @@ import org.lflang.lf.Array;
 import org.lflang.lf.Element;
 import org.lflang.lf.KeyValuePair;
 import org.lflang.lf.KeyValuePairs;
+import org.lflang.util.FileUtil;
+import org.lflang.util.StringUtil;
 import org.lflang.validation.LFValidator;
 
 /**
@@ -60,7 +60,7 @@ public enum TargetProperty {
      */
     BUILD("build", UnionType.STRING_OR_STRING_ARRAY,
             Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
-                config.buildCommands = ASTUtils.toListOfStrings(value);
+                config.buildCommands = ASTUtils.elementToListOfStrings(value);
             }),
     
     /**
@@ -70,7 +70,7 @@ public enum TargetProperty {
     BUILD_TYPE("build-type", UnionType.BUILD_TYPE_UNION,
             Arrays.asList(Target.C, Target.CCPP, Target.CPP, Target.Rust), (config, value, err) -> {
                 config.cmakeBuildType = (BuildType) UnionType.BUILD_TYPE_UNION
-                        .forName(ASTUtils.toText(value));
+                        .forName(ASTUtils.elementToSingleString(value));
                 // set it there too, because the default is different.
                 config.rust.setBuildType(config.cmakeBuildType);
             }),
@@ -79,16 +79,16 @@ public enum TargetProperty {
      * Directive to let the federate execution handle clock synchronization in software.
      */
     CLOCK_SYNC("clock-sync", UnionType.CLOCK_SYNC_UNION,
-               Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
+               Arrays.asList(Target.C, Target.CCPP, Target.Python), (config, value, err) -> {
         config.clockSync = (ClockSyncMode) UnionType.CLOCK_SYNC_UNION
-            .forName(ASTUtils.toText(value));
+            .forName(ASTUtils.elementToSingleString(value));
     }),
     
     /**
      * Key-value pairs giving options for clock synchronization.
      */
     CLOCK_SYNC_OPTIONS("clock-sync-options",
-            DictionaryType.CLOCK_SYNC_OPTION_DICT, Arrays.asList(Target.C, Target.CCPP),
+            DictionaryType.CLOCK_SYNC_OPTION_DICT, Arrays.asList(Target.C, Target.CCPP, Target.Python),
             (config, value, err) -> {
                 for (KeyValuePair entry : value.getKeyvalue().getPairs()) {
                     ClockSyncOption option = (ClockSyncOption) DictionaryType.CLOCK_SYNC_OPTION_DICT
@@ -133,14 +133,14 @@ public enum TargetProperty {
      */
     CMAKE_INCLUDE("cmake-include", UnionType.FILE_OR_FILE_ARRAY,
             Arrays.asList(Target.CPP, Target.C, Target.CCPP), (config, value, err) -> {
-                config.cmakeIncludes = ASTUtils.toListOfStrings(value);
+                config.cmakeIncludes = ASTUtils.elementToListOfStrings(value);
             },
             // FIXME: This merging of lists is potentially dangerous since
             // the incoming list of cmake-includes can belong to a .lf file that is
             // located in a different location, and keeping just filename
             // strings like this without absolute paths is incorrect.
             (config, value, err) -> {
-                config.cmakeIncludes.addAll(ASTUtils.toListOfStrings(value));
+                config.cmakeIncludes.addAll(ASTUtils.elementToListOfStrings(value));
             }),
     
     /**
@@ -158,7 +158,7 @@ public enum TargetProperty {
      */
     COMPILER("compiler", PrimitiveType.STRING, Target.ALL,
             (config, value, err) -> {
-                config.compiler = ASTUtils.toText(value);
+                config.compiler = ASTUtils.elementToSingleString(value);
             }),
     
     /**
@@ -180,7 +180,7 @@ public enum TargetProperty {
                                 .forName(entry.getName());
                         switch (option) {
                             case FROM:
-                                config.dockerOptions.from = ASTUtils.toText(entry.getValue());
+                                config.dockerOptions.from = ASTUtils.elementToSingleString(entry.getValue());
                                 break;
                             default:
                                 break;
@@ -195,7 +195,7 @@ public enum TargetProperty {
      */
     EXTERNAL_RUNTIME_PATH("external-runtime-path", PrimitiveType.STRING,
             Arrays.asList(Target.CPP), (config, value, err) -> {
-                config.externalRuntimePath = ASTUtils.toText(value);
+                config.externalRuntimePath = ASTUtils.elementToSingleString(value);
             }),
 
     /**
@@ -211,16 +211,16 @@ public enum TargetProperty {
      * Directive to stage particular files on the class path to be
      * processed by the code generator.
      */
-    FILES("files", UnionType.FILE_OR_FILE_ARRAY, Target.ALL,
+    FILES("files", UnionType.FILE_OR_FILE_ARRAY, List.of(Target.C, Target.CCPP, Target.Python),
             (config, value, err) -> {
-                config.fileNames = ASTUtils.toListOfStrings(value);
+                config.fileNames = ASTUtils.elementToListOfStrings(value);
             },
             // FIXME: This merging of lists is potentially dangerous since
             // the incoming list of files can belong to a .lf file that is
             // located in a different location, and keeping just filename
             // strings like this without absolute paths is incorrect.
             (config, value, err) -> {
-                config.fileNames.addAll(ASTUtils.toListOfStrings(value));
+                config.fileNames.addAll(ASTUtils.elementToListOfStrings(value));
             }),
     
     /**
@@ -228,7 +228,7 @@ public enum TargetProperty {
      */
     FLAGS("flags", UnionType.STRING_OR_STRING_ARRAY,
             Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
-                config.compilerFlags = ASTUtils.toListOfStrings(value);
+                config.compilerFlags = ASTUtils.elementToListOfStrings(value);
             }),
     
     /**
@@ -238,14 +238,14 @@ public enum TargetProperty {
             Arrays.asList(Target.C, Target.CCPP, Target.Python),
             (config, value, err) -> {
                 config.coordination = (CoordinationType) UnionType.COORDINATION_UNION
-                        .forName(ASTUtils.toText(value));
+                        .forName(ASTUtils.elementToSingleString(value));
             }),
     
     /**
      * Key-value pairs giving options for clock synchronization.
      */
     COORDINATION_OPTIONS("coordination-options",
-            DictionaryType.COORDINATION_OPTION_DICT, Arrays.asList(Target.C, Target.CCPP),
+            DictionaryType.COORDINATION_OPTION_DICT, Arrays.asList(Target.C, Target.CCPP, Target.Python),
             (config, value, err) -> {
                 for (KeyValuePair entry : value.getKeyvalue().getPairs()) {
                     CoordinationOption option = (CoordinationOption) DictionaryType.COORDINATION_OPTION_DICT
@@ -276,7 +276,7 @@ public enum TargetProperty {
     LOGGING("logging", UnionType.LOGGING_UNION, Target.ALL,
             (config, value, err) -> {
                 config.logLevel = (LogLevel) UnionType.LOGGING_UNION
-                        .forName(ASTUtils.toText(value));
+                        .forName(ASTUtils.elementToSingleString(value));
             }),
     
     /**
@@ -303,15 +303,34 @@ public enum TargetProperty {
     PROTOBUFS("protobufs", UnionType.FILE_OR_FILE_ARRAY,
             Arrays.asList(Target.C, Target.CCPP, Target.TS, Target.Python),
             (config, value, err) -> {
-                config.protoFiles = ASTUtils.toListOfStrings(value);
+                config.protoFiles = ASTUtils.elementToListOfStrings(value);
             }),
+
+
+    /**
+     * Directive to specify that ROS2 specific code is generated,
+     */
+    ROS2("ros2", PrimitiveType.BOOLEAN,
+         List.of(Target.CPP), (config, value, err) -> {
+             config.ros2 = ASTUtils.toBoolean(value);
+    }),
 
     /**
      * Directive for specifying a specific version of the reactor runtime library.
      */
     RUNTIME_VERSION("runtime-version", PrimitiveType.STRING,
             Arrays.asList(Target.CPP), (config, value, err) -> {
-                config.runtimeVersion = ASTUtils.toText(value);
+                config.runtimeVersion = ASTUtils.elementToSingleString(value);
+            }),
+    
+    
+    /**
+     * Directive for specifying a specific runtime scheduler, if supported.
+     */
+    SCHEDULER("scheduler", UnionType.SCHEDULER_UNION,
+            Arrays.asList(Target.C, Target.CCPP, Target.Python), (config, value, err) -> {
+                config.schedulerType = (SchedulerOption) UnionType.SCHEDULER_UNION
+                        .forName(ASTUtils.elementToSingleString(value));
             }),
 
     /**
@@ -323,12 +342,21 @@ public enum TargetProperty {
             }),
 
     /**
-     * Directive to specify the number of threads.
+     * Directive to indicate whether the runtime should use multi-threading.
      */
-    THREADS("threads", PrimitiveType.NON_NEGATIVE_INTEGER,
-            Arrays.asList(Target.C, Target.CPP, Target.CCPP, Target.Python),
+    THREADING("threading", PrimitiveType.BOOLEAN,
+              List.of(Target.C, Target.CCPP, Target.Python),
+              (config, value, err) -> {
+                  config.threading = ASTUtils.toBoolean(value);
+              }),
+
+    /**
+     * Directive to specify the number of worker threads used by the runtime.
+     */
+    WORKERS("workers", PrimitiveType.NON_NEGATIVE_INTEGER,
+            List.of(Target.C, Target.CCPP, Target.Python, Target.CPP, Target.Rust),
             (config, value, err) -> {
-                config.threads = ASTUtils.toInteger(value);
+                config.workers = ASTUtils.toInteger(value);
             }),
     
     /**
@@ -358,7 +386,7 @@ public enum TargetProperty {
                             .forName(entry.getName());
                         switch (option) {
                         case TRACE_FILE_NAME:
-                            config.tracing.traceFileName = ASTUtils.toText(entry.getValue());
+                            config.tracing.traceFileName = ASTUtils.elementToSingleString(entry.getValue());
                             break;
                         default:
                             break;
@@ -403,7 +431,7 @@ public enum TargetProperty {
                  List.of(Target.Rust), (config, value, err) -> {
         Path referencePath;
         try {
-            referencePath = FileConfig.toPath(value.eResource().getURI()).toAbsolutePath();
+            referencePath = FileUtil.toPath(value.eResource().getURI()).toAbsolutePath();
         } catch (IOException e) {
             err.reportError(value, "Invalid path? " + e.getMessage());
             throw new RuntimeIOException(e);
@@ -413,12 +441,12 @@ public enum TargetProperty {
         // are as expected.
 
         if (value.getLiteral() != null) {
-            Path resolved = referencePath.resolveSibling(ASTUtils.withoutQuotes(value.getLiteral()));
+            Path resolved = referencePath.resolveSibling(StringUtil.removeQuotes(value.getLiteral()));
 
             config.rust.addAndCheckTopLevelModule(resolved, value, err);
         } else if (value.getArray() != null) {
             for (Element element : value.getArray().getElements()) {
-                String literal = ASTUtils.withoutQuotes(element.getLiteral());
+                String literal = StringUtil.removeQuotes(element.getLiteral());
                 Path resolved = referencePath.resolveSibling(literal);
                 config.rust.addAndCheckTopLevelModule(resolved, element, err);
             }
@@ -431,7 +459,7 @@ public enum TargetProperty {
      */
     CARGO_FEATURES("cargo-features", ArrayType.STRING_ARRAY,
                    List.of(Target.Rust), (config, value, err) -> {
-        config.rust.setCargoFeatures(ASTUtils.toListOfStrings(value));
+        config.rust.setCargoFeatures(ASTUtils.elementToListOfStrings(value));
     }),
 
     /**
@@ -760,9 +788,10 @@ public enum TargetProperty {
         BUILD_TYPE_UNION(Arrays.asList(BuildType.values()), null),
         COORDINATION_UNION(Arrays.asList(CoordinationType.values()),
                 CoordinationType.CENTRALIZED),
+        SCHEDULER_UNION(Arrays.asList(SchedulerOption.values()), SchedulerOption.getDefault()),
         LOGGING_UNION(Arrays.asList(LogLevel.values()), LogLevel.INFO),
         CLOCK_SYNC_UNION(Arrays.asList(ClockSyncMode.values()),
-                ClockSyncMode.INITIAL),
+                ClockSyncMode.INIT),
         DOCKER_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.DOCKER_DICT),
                 null),
         TRACING_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.TRACING_DICT),
@@ -837,7 +866,7 @@ public enum TargetProperty {
                 if (option instanceof TargetPropertyType) {
                     return ((TargetPropertyType) option).validate(e);
                 } else {
-                    return ASTUtils.toText(e)
+                    return ASTUtils.elementToSingleString(e)
                             .equalsIgnoreCase(option.toString());
                 }
             }).findAny();
@@ -995,8 +1024,8 @@ public enum TargetProperty {
      * @author{Edward A. Lee <eal@berkeley.edu>}
      */
     public enum ClockSyncMode {
-        OFF, INITIAL, ON;
-        
+        OFF, INIT, ON; // TODO Discuss initial in now a mode keyword (same as startup) and cannot be used as target property value, thus changed it to init
+        // FIXME I could not test if this change breaks anything
         
         /**
          * Return the name in lower case.
@@ -1055,11 +1084,11 @@ public enum TargetProperty {
      */
     public enum PrimitiveType implements TargetPropertyType {
         BOOLEAN("'true' or 'false'",
-                v -> ASTUtils.toText(v).equalsIgnoreCase("true")
-                        || ASTUtils.toText(v).equalsIgnoreCase("false")),
+                v -> ASTUtils.elementToSingleString(v).equalsIgnoreCase("true")
+                        || ASTUtils.elementToSingleString(v).equalsIgnoreCase("false")),
         INTEGER("an integer", v -> {
             try {
-                Integer.parseInt(ASTUtils.toText(v));
+                Integer.parseInt(ASTUtils.elementToSingleString(v));
             } catch (NumberFormatException e) {
                 return false;
             }
@@ -1067,7 +1096,7 @@ public enum TargetProperty {
         }),
         NON_NEGATIVE_INTEGER("a non-negative integer", v -> {
             try {
-                int result = Integer.parseInt(ASTUtils.toText(v));
+                int result = Integer.parseInt(ASTUtils.elementToSingleString(v));
                 if (result < 0)
                     return false;
             } catch (NumberFormatException e) {
@@ -1131,7 +1160,7 @@ public enum TargetProperty {
             // Looking in the same directory is too restrictive. Disabling this check for now.
             /*
             if (this == FILE) {
-                String file = ASTUtils.toText(e);
+                String file = ASTUtils.toSingleString(e);
                  
                 if (!FileConfig.fileExists(file, FileConfig.toPath(e.eResource().getURI()).toFile().getParent())) {
                     v.targetPropertyWarnings
@@ -1273,6 +1302,37 @@ public enum TargetProperty {
         @Override
         public String toString() {
             return this.name().toLowerCase();
+        }
+    }
+    
+    /**
+     * Supported schedulers.
+     * @author{Soroush Bateni <soroush@utdallas.edu>}
+     */
+    public enum SchedulerOption {
+        NP(false),         // Non-preemptive
+        GEDF_NP(true),    // Global EDF non-preemptive
+        GEDF_NP_CI(true); // Global EDF non-preemptive with chain ID
+        // PEDF_NP(true);    // Partitioned EDF non-preemptive (FIXME: To be re-added in a future PR)
+        
+        /**
+         * Indicate whether or not the scheduler prioritizes reactions by deadline.
+         */
+        private final Boolean prioritizesDeadline;
+        
+        /**
+         * Return true if the scheduler prioritizes reactions by deadline.
+         */
+        public Boolean prioritizesDeadline() {
+            return this.prioritizesDeadline;
+        }
+        
+        private SchedulerOption(Boolean prioritizesDeadline) {
+            this.prioritizesDeadline = prioritizesDeadline;
+        }
+        
+        public static SchedulerOption getDefault() {
+            return NP;
         }
     }
 
